--- a/style.css
+++ b/style.css
@@ -168,6 +168,59 @@ main{
     height: 600px;
 }
 
+/* MAIN 3 */
+.container-main-3{
+    max-width: 1900px;
+    height: 600px;
+    margin: 0 auto;
+    padding-top: 40px;
+}
+
+.row-main-3{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.col-100-main-3{
+    width: 100%;
+    height: 200px;
+    margin-left: 450px;
+    margin-right: 450px;
+}
+
+.testimonials{
+    text-align: center;
+}
+
+.expert-partners{
+    text-align: center;
+    color: rgba(151,146,228,255);
+    padding-top: 10px;
+    font-size: 40px;
+}
+
+.text-expert-partners{
+    text-align: center;
+    padding-top: 20px;
+    font-size: 20px;
+}
+
+.col-100-main-3-2{
+    width: 100%;
+    height: 600px;
+    margin-left: 450px;
+    margin-right: 450px;
+}
+
+.mini-col{
+    background-color: rgba(151,146,228,255);
+    width: 100%;
+    height: 250px;
+    border: 1px solid black;
+    margin-bottom: 30px;
+    border-radius: 40px;
+}
+
 
 
 
