--- a/style.css
+++ b/style.css
@@ -276,7 +276,6 @@ main{
 
 .square-2{
     background-color: white;
-    border: 1px solid black;
     width: 400px;
     height: 475px;
     margin-top: 100px;
@@ -311,12 +310,6 @@ main{
     padding: 18px 20px;
     border-radius: 50px;
 }
-
-
-
-
-
-
 
 /* MAIN 3 */
 .container-main-3{
@@ -370,6 +363,51 @@ main{
     margin-bottom: 30px;
     border-radius: 40px;
 }
+
+.testimonial1{
+    width: 225px;
+    height: 210px;
+    border-radius: 500px;
+    margin-top: 20px;
+    margin-left: 20px;
+}
+
+.testimonial2{
+    width: 225px;
+    height: 210px;
+    border-radius: 500px;
+    margin-top: 20px;
+    margin-left: 20px;
+}
+
+.testimonial3{
+    width: 225px;
+    height: 210px;
+    border-radius: 500px;
+    margin-top: 20px;
+    margin-left: 20px;
+}
+
+.text-testimonial1{
+    color: white;
+    height: 50px;
+    font-size: 20px;
+    padding-top: 50px;
+    width: 850px;
+    margin-left: 20px;
+}
+
+.text-testimonial2{
+        position: absolute;
+        margin-top: 130px;
+        margin-left: 265px;
+        color: white;
+        font-size: 20px;
+}
+
+
+
+
 
 /* MAIN 4 */
 .container-main-4{
