--- a/style.css
+++ b/style.css
@@ -507,20 +507,58 @@ main{
 }
 
 .square-1-5{
-    background-color: yellow;
-    border: 1px solid black;
     width: 700px;
     height: 500px;
     margin-left: 400px;
 }
 
+.title-square-1-5{
+    color: rgba(151, 146, 228, 255);
+    font-size: 40px;
+    padding-top: 10px;
+    width: 200px;
+    margin-left: 215px;
+}
+
+.text-square-1-5{
+    color: #595959;
+    padding-top: 30px;
+    width: 500px;
+    margin-left: 215px;
+}
+
 .square-2-5{
-    background-color: yellow;
-    border: 1px solid black;
     width: 350px;
     height: 500px;
     margin-left: 200px;
 }
+
+.img-square-2-5{
+    width: 200px;
+    height: 200px;
+    border-radius: 100px;
+    margin-left: 70px;
+}
+
+
+.text-square-2-5{
+    color: rgba(151, 146, 228, 255);
+    font-size: 30px;
+    margin-left: 50px;
+    margin-right: 45px;
+    padding-top: 20px;
+}
+
+.link-square-2-5{
+    background-color: rgba(151, 146, 228, 255);
+    padding: 10px 30px;
+    width: 200px;
+    margin-left: 60px;
+    margin-top: 20px;
+    border-radius: 40px;
+}
+
+
 
 /* MAIN 6 */
 .container-main-6{
